2007-03-29  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
	Stupid flumotion complains if a feeder is not in the template,
	so if there is no video just tee the ts to the dummy video
	feeder.

2007-03-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  _bus_message_received_cb):
	* flumotion/component/dvb/dvb.xml:
	Add new options: has-video, video-decoder and audio-decoder.
	Make sure dvb stats are logged in debug level.
	Allow audio-only dvb.

2007-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion-dvb.spec.in:
	  fix buglets

2007-02-08  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	  Back to dev.

=== release 0.3.1 ===

2007-02-08  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env
	* configure.ac:
	* flumotion-dvb.spec.in:
	* po/fr.po:
	* po/nl.po:
	  To 0.3.1

2006-12-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Change component type to be named as per convention.

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	We should no longer use es-pids as we have a PMT.

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix pipeline.

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Remove offending (sq).

2006-11-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Added a scaled-width property so we can fix interlacing issues.

2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Added program-number to properties.

2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py: